novos componentes teste firebase

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,29 @@
 </head>
 
 <body>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-analytics.js"></script>
+
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyCIoX09vPsJQABGmDRA3GnVekMjcZymuB8",
+            authDomain: "easyfinancas-d1cb0.firebaseapp.com",
+            projectId: "easyfinancas-d1cb0",
+            storageBucket: "easyfinancas-d1cb0.appspot.com",
+            messagingSenderId: "161335320210",
+            appId: "1:161335320210:web:aa31a25b4ebae71394504b",
+            measurementId: "G-S3E45JN2VP"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
     <app-root></app-root>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
